--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,21 @@ body {
   background-color: #ffffff;
 }
 
+.projects .project-row {
+  margin-bottom: 3rem;
+}
+.projects .project-row:last-child {
+  margin-bottom: 0;
+}
+@media (min-width: 992px) {
+  .projects .project-row {
+    margin-bottom: 8rem;
+  }
+  .projects .project-list > .project-row:nth-child(even) {
+    flex-direction: row-reverse;
+  }
+}
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.95);
   padding: 1rem 0;
