--- a/scss/main.scss
+++ b/scss/main.scss
@@ -313,6 +313,17 @@ blockquote {
     }
 }
 
+.about-portrait {
+    width: 100%;
+    transition: all 0.3s ease;
+
+    @include media-breakpoint-down(md) {
+        height: 300px;
+        object-fit: cover;
+        object-position: center 90%;
+    }
+}
+
 .badge.text-bg-primary {
     background-color: #1c355e !important;
     color: #f9f9f9 !important;
