moved all colors to variables

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,7 @@
 /* ==============================
+   Color Variables
+============================== */
+/* ==============================
    Font families
 ============================== */
 :root {
